--- a/admin_soft/templates/admin/index.html
+++ b/admin_soft/templates/admin/index.html
@@ -5,59 +5,57 @@
 
 {% block content %}
 
-    <div class="container-fluid py-4">
-
-        <div class="col-lg-4 col-md-6">
-          <div class="card h-100">
-            <div class="card-header pb-0">
+<div class="container-fluid py-4"> 
+  <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+      <div class="card h-100">
+          <div class="card-header pb-0">
               <h6>{% trans 'Recent actions' %}</h6>
               <p class="text-sm">
-                <i class="fa fa-arrow-down text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">{% trans 'My actions' %}</span>
+                  <i class="fa fa-arrow-right text-success" aria-hidden="true"></i>
+                  <span class="font-weight-bold">{% trans 'My actions' %}</span>
               </p>
-            </div>
-            <div class="card-body p-3">
-              <div class="timeline timeline-one-side">
+          </div>
+          <div class="card-body p-3">
+              <div class="timeline">
                   {% load log %}
                   {% get_admin_log 10 as admin_log for_user user %}
                   {% if admin_log %}
                       {% for entry in admin_log %}
                           <div class="timeline-block mb-3">
-                            <span class="timeline-step">
-                                {% if entry.is_addition %}
-                                      <span class="fa fa-plus-circle text-success text-gradient"></span>
+                              <div class="timeline-step">
+                                  {% if entry.is_addition %}
+                                      <span class="fa fa-plus-circle text-success"></span>
+                                  {% elif entry.is_change %}
+                                      <span class="fa fa-edit text-warning"></span>
+                                  {% elif entry.is_deletion %}
+                                      <span class="fa fa-trash text-danger"></span>
                                   {% endif %}
-                                  {% if entry.is_change %}
-                                      <span class="fa fa-edit text-warning text-gradient"></span>
-                                  {% endif %}
-                                  {% if entry.is_deletion %}
-                                      <span class="fa fa-trash text-danger text-gradient"></span>
-                                  {% endif %}
-                            </span>
-                            <div class="timeline-content">
-                              <h6 class="text-dark text-sm font-weight-bold mb-0">
-                                {% if entry.content_type %}
-                                      {% filter capfirst %}{{ entry.content_type }}{% endfilter %}
-                                  {% else %}
-                                      {% trans 'Unknown content' %}
-                                  {% endif %}
-                              </h6>
-                              <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ entry.object_repr }}</p>
-                            </div>
+                              </div>
+                              <div class="timeline-content">
+                                  <h6 class="text-dark text-sm font-weight-bold mb-1">
+                                      {% if entry.content_type %}
+                                          {{ entry.content_type|capfirst }}
+                                      {% else %}
+                                          {% trans 'Unknown content' %}
+                                      {% endif %}
+                                  </h6>
+                                  <p class="text-secondary font-weight-bold text-xs mb-0">{{ entry.object_repr }}</p>
+                                  <p class="text-muted font-italic text-xs mb-0">{{ entry.action_time|date:"F j, Y, g:i a" }}</p>
+                              </div>
                           </div>
                       {% endfor %}
                   {% else %}
-                      <p>{% trans 'None available' %}</p>
+                      <p class="text-muted">{% trans 'No recent actions available' %}</p>
                   {% endif %}
               </div>
-            </div>
           </div>
-        </div>
       </div>
+  </div>
+</div>
 
-      {% include "includes/footer.html" %}
+{% include "includes/footer.html" %}
 
-    </div>
+</div>
 
 {% endblock content %}
 
